fixing the profile invisible text; fix the sign-up form wrong name; this closes #77 ;

--- a/invenio_theme_tugraz/assets/semantic-ui/less/invenio_theme_tugraz/accounts.less
+++ b/invenio_theme_tugraz/assets/semantic-ui/less/invenio_theme_tugraz/accounts.less
@@ -52,7 +52,8 @@
   background-color: #000000 !important;
 }
 
-.field {
+.form-accounts {
+  margin: 15%;
   text-align: left !important;
   & i {
     color: #fff !important;
@@ -133,10 +134,6 @@ login and sign-up pages form background color
   color: #000 !important;
   font-family: "Source Sans Pro";
   font-size: initial;
-}
-
-.form-margin {
-  margin: 15%;
 }
 
 /***
